--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--favicon-->
-    <link rel=”shortcut icon” href=”favicon.ico.png” type=”image/jpg”>
+    <!-- Add the favicon using the link element -->
+    <link rel="icon" href="favicon.ico.jpg" type="image/jpeg" />
 
     <!-- font awesome and google fonts -->
     <link
