Add Google fonts, colors and buttons style

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous"
-      rel="stylesheet"
-    />
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>CDMX Quiz</title>
@@ -30,7 +29,7 @@
         <!-- Quiz elements-->
         <div id="game-container" class="game-box hide">
             <!--Questions will come from the Java Script file-->
-            <div id="question">Question</div>
+            <div id="question"><h2>Questions</h2></div>
             <!--Answers wull come from the Java Script file-->
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
