--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
-            <!--Scoreboard to show the score so far in the quiz-->
+            <!--Scoreboard to show the score in the quiz-->
             <div class="score-board">
                 <div id=total-score>Score:<div id="score">0</div>out of<div id="total-answered">0</div>
                 </div>
