Adjust the columns

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <body>
     <div class="background-image"></div>
     <div class="quiz-container">
+      <img id="logo" src="images/flag.png" alt="Mexican flag in a circle" width="10%">
       <h1>Mexico City Quiz</h1>
     <div class="main">
         <!-- Quiz elements-->
