--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="background-image"></div>
     <div class="quiz-container">
       <img id="logo" src="images/flag.png" alt="Mexican flag in a circle" width="10%">
-      <h1>Mexico City Quiz</h1>
+      <h1>CDMX - Mexico City Quiz</h1>
     <div class="main">
         <!-- Quiz elements-->
         <div id="game-container" class="game-box hide">
