--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       crossorigin="anonymous"
     />
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>CDMX Quiz</title>
@@ -24,26 +25,32 @@
   <body>
     <div class="background-image"></div>
     <div class="quiz-container">
-      <img id="logo" src="images/flag.png" alt="Mexican flag in a circle" width="10%">
+      <img id="logo" src="images/flag.png" alt="Mexican flag in a circle" />
       <h1>CDMX - Mexico City Quiz</h1>
-    <div class="main">
+      <div class="main">
         <!-- Quiz elements-->
         <div id="game-container" class="game-box hide">
-            <!--Questions will come from the Java Script file-->
-            <div id="question"><h2>Questions</h2></div>
-            <!--Answers wull come from the Java Script file-->
-            <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+          <!--Questions will come from the Java Script file-->
+          <div id="question"><h2>Questions</h2></div>
+          <!--Answers wull come from the Java Script file-->
+          <div id="answer-buttons" class="btn-grid">
+            <button class="btn">Answer 1</button>
+            <button class="btn">Answer 2</button>
+            <button class="btn">Answer 3</button>
+            <button class="btn">Answer 4</button>
+          </div>
+          <!--Scoreboard to show the score in the quiz-->
+          <div class="score-board">
+            <div id="total-score">
+              Score:
+              <div id="score">0</div>
+              out of
+              <div id="total-answered">0</div>
             </div>
-            <!--Scoreboard to show the score in the quiz-->
-            <div class="score-board">
-                <div id=total-score>Score:<div id="score">0</div>out of<div id="total-answered">0</div>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
+    </div>
 
     <script src="assets/js/script.js"></script>
   </body>
