Style score button

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
           <!--Scoreboard to show the score in the quiz-->
           <div class="score-board">
             <div id="total-score">
-              Score:
-              <div id="score">0</div>
-              out of
-              <div id="total-answered">0</div>
+              <button id="score-btn">
+                Score:
+                <div id="score">0</div>
+                out of
+                <div id="total-answered">0</div>
+              </button>
             </div>
           </div>
         </div>
