Style button, add icon

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 out of
                 <div id="total-answered">0</div>
               </button>
+              <div>
+                <img id="plant" src="images/cactus.png" alt="Cactus icon" />
+              </div>
             </div>
           </div>
         </div>
