Add a header in html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
   </head>
 
   <body>
+    <header>
     <div class="background-image"></div>
     <div class="quiz-container">
       <img id="logo" src="images/flag.png" alt="Mexican flag in a circle" />
       <h1>CDMX - Mexico City Quiz</h1>
+    </header>
       <div class="main">
         <!-- Quiz elements-->
         <div id="game-container" class="game-box hide">
