Add meta description and keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Explore Mexico City through our quiz and discover new places.">
+    <meta name="keywords" content="Mexico City, Mexico, expats in Mexico City, CDMX, CDMX life">
     <!-- Add the favicon using the link element -->
     <link rel="icon" href="favicon.ico.jpg" type="image/jpeg" />
 
